# hantek-scope

./: .gitignore  README.md  pyproject.toml
scripts/calibration/: calibrate_vert_cal.py  verify_vert_cal_db.py
scripts/verification/: check_A_scan.py  check_rebasing_need.py  check_sync.py
src/hantek_scope/: __init__.py  acquisition.py  averaging.py  calibration.py  constants.py  device.py  enums.py  gating.py  models.py  parsing.py  paths.py  sdk_bindings.py  sdk_structs.py
