[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hantek-scope"
version = "0.1.0"
description = "Python API and acquisition helpers for Hantek 6000BD-series USB oscilloscopes"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "hantek",
    "oscilloscope",
    "usb",
    "data-acquisition",
    "dds",
]
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/Tasyaak/hantek-scope"
Issues = "https://github.com/Tasyaak/hantek-scope/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hantek_scope*"]